--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "modern-normalize": "^3.0.1",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
