--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2",
     "zustand": "^5.0.8"
   },
