--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2",
     "yup": "^1.7.1",
