--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false,
   "buildCommand": "npm install --legacy-peer-deps && npm run build"
 }
