--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/manrope": "^5.2.8",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
+    "izitoast": "^1.4.0",
     "modern-normalize": "^3.0.1",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
