--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/manrope": "^5.2.8",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "izitoast": "^1.4.0",
     "modern-normalize": "^3.0.1",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2",
